@@ -27,7 +27,7 @@ Optimizations
 
 Bug Fixes
 ---------------------
-
+(No changes)
 
 Deprecation Removals
 ----------------------
@@ -128,6 +128,8 @@ Bug Fixes
 * SOLR-17152: Better alignment of Admin UI graph (janhoy)
 
 * SOLR-17148: Fixing Config API overlay property enabling or disabling the cache (Sanjay Dutt, hossman, Eric Pugh)
+
+* SOLR-17186: Streaming query breaks if token contains backtick (Rahul Goswami via Eric Pugh)
 
 Dependency Upgrades
 ---------------------
